fix layout issues for angular example app

--- a/angular-workspace/projects/example-client-app/src/app/app.component.scss
+++ b/angular-workspace/projects/example-client-app/src/app/app.component.scss
@@ -7,4 +7,5 @@
 
 .router-outlet {
     overflow-y: auto;
+    height: 100%;
 }
