--- a/angular-workspace/projects/example-client-app/src/app/customapp/customapp.component.scss
+++ b/angular-workspace/projects/example-client-app/src/app/customapp/customapp.component.scss
@@ -1,5 +1,11 @@
 @import '~@ni/nimble-angular/styles/tokens';
 
+.content {
+    width: 100%;
+    box-sizing: border-box;
+    font: $ni-nimble-body-font;
+}
+
 .container-label {
     font: $ni-nimble-group-header-font;
     color: $ni-nimble-group-header-font-color;
